--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PopularMoviesPractice</string>
+    <string name="filter">Filter</string>
+    <string name="filterPopularity">Popularity</string>
+    <string name="filterRated">Top Rated</string>
 </resources>
